--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-typescript-template",
+  "name": "@stephen-shopopop/std",
   "version": "1.0.0",
-  "description": "template typescript nodejs with ts-standard",
+  "description": "Package libray standard",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "private": true,
@@ -16,10 +16,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/{repository}.git"
+    "url": "git+https://github.com/stephen-shopopop/standard.git"
   },
   "bugs": {
-    "url": "https://github.com/{repository}/issues"
+    "url": "https://github.com/stephen-shopopop/standard/issues"
   },
   "contributors": [
     "stephen.deletang@shopopop.com"
@@ -42,7 +42,7 @@
   "keywords": [
     "standard"
   ],
-  "author": "tech-shopopop <tech@shopopop.com>",
+  "author": "stephen-shopopop <stephen.deletang@shopopop.com>",
   "license": "ISC",
   "simple-git-hooks": {
     "pre-commit": "npx commitlint --edit $1 & npm run lint",
@@ -53,7 +53,8 @@
       "dist",
       "docs",
       "jest.config.ts",
-      "commitlint.config.js"
+      "commitlint.config.js",
+      "src/validators/utils.test.ts"
     ]
   },
   "devDependencies": {
@@ -67,10 +68,12 @@
     "standard-version": "^9.3.2",
     "ts-jest": "^27.1.2",
     "ts-standard": "^11.0.0",
-    "typedoc": "^0.22.10"
-  },
-  "dependencies": {
+    "typedoc": "^0.22.10",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@types/json-buffer": "^3.0.0",
+    "json-buffer": "^3.0.1"
   }
 }
