--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stephen-shopopop/standard",
   "version": "1.4.1",
-  "description": "Package libray standard",
+  "description": "Package library standard",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
@@ -60,22 +60,22 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@types/node": "^17.0.40",
-    "jest": "^28.1.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@types/json-buffer": "^3.0.0",
+    "@types/node": "^17.0.45",
+    "jest": "^28.1.2",
     "rimraf": "^3.0.2",
     "simple-git-hooks": "^2.8.0",
     "snazzy": "^9.0.0",
     "standard-version": "^9.5.0",
-    "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
     "ts-standard": "^11.0.0",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.7.3"
+    "typedoc": "^0.22.18",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/json-buffer": "^3.0.0",
     "json-buffer": "^3.0.1"
   }
 }
